syntax = "proto2";

package frankenpaxos.statemachine;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "frankenpaxos.statemachine"
  flat_package: true
};

message SetKeyValuePair {
  required string key = 1;
  required string value = 2;
}

message GetKeyValuePair {
  required string key = 1;
  optional string value = 2;
}

message SetRequest {
  repeated SetKeyValuePair key_value = 1;
}

message SetReply {}

message GetRequest {
  repeated string key = 1;
}

message GetReply {
  repeated GetKeyValuePair key_value = 1;
}

message Input {
  oneof request {
    GetRequest get_request = 1;
    SetRequest set_request = 2;
  }
}

message Output {
  oneof reply {
    GetReply get_reply = 1;
    SetReply set_reply = 2;
  }
}
